--- a/app/src/main/res/layout/acivity_select_scene.xml
+++ b/app/src/main/res/layout/acivity_select_scene.xml
@@ -22,14 +22,12 @@
             android:layout_marginHorizontal="16dp"
             android:layout_height="0dp"
             android:id="@+id/recyScene"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:listitem="@layout/item_select_scene"
             app:spanCount="2"
             android:clipToPadding="false"
             android:layout_marginBottom="@dimen/dp_10"
-            android:paddingBottom="50dp"
+            android:paddingBottom="30dp"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/include" />
+            app:layout_constraintTop_toBottomOf="@+id/layout" />
 
         <ImageView
             android:id="@+id/imageView"
